--- a/models/yolov5x.yaml
+++ b/models/yolov5x.yaml
@@ -43,13 +43,13 @@ head:
    [[-1, 1], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [64, False]],   # 26 (P3/8-small)
 
-   [-1, 1, Conv, [64, 3, 2]],
-   [[-1, 22], 1, Concat, [1]], # cat head P4
-   [-1, 3, C3, [128, False]],  # 29 (P4/16-medium)
+   #[-1, 1, Conv, [64, 3, 2]],
+   #[[-1, 22], 1, Concat, [1]], # cat head P4
+   #[-1, 3, C3, [128, False]],  # 29 (P4/16-medium)
 
-   [-1, 1, Conv, [128, 3, 2]],
-   [[-1, 18], 1, Concat, [1]], # cat head P4
-   [-1, 3, C3, [256, False]],  # 32 (P4/16-medium)
+   #[-1, 1, Conv, [128, 3, 2]],
+   #[[-1, 18], 1, Concat, [1]], # cat head P4
+   #[-1, 3, C3, [256, False]],  # 32 (P4/16-medium)
 
    #[[26, 29, 32], 1, Detect, [nc]],  # Detect(P3, P4, P5)
    [[26], 1, Detect, [nc]],  # Detect(P3, P4, P5)
