--- a/models/yolov5x.yaml
+++ b/models/yolov5x.yaml
@@ -3,12 +3,12 @@
 # Parameters
 nc: 19  # number of classes
 depth_multiple: 0.33  # model depth multiple
-width_multiple: 0.25  # layer channel multiple
+width_multiple: 0.50  # layer channel multiple
 
 # YOLOv5 v6.0 backbone
 backbone:
   # [from, number, module, args]
-  [[-1, 1, Conv, [64, 3, 1]],   
+  [[-1, 1, Conv, [64, 5, 1, 2]],   
    [-1, 3, C3, [64]],           # 1-P1/1
    [-1, 1, Conv, [128, 3, 2]],  
    [-1, 6, C3, [128]],          # 3-P2/2
