--- a/models/yolov5l.yaml
+++ b/models/yolov5l.yaml
@@ -1,13 +1,9 @@
 # YOLOv5 🚀 by Ultralytics, GPL-3.0 license
 
 # Parameters
-nc: 80  # number of classes
+nc: 19  # number of classes
 depth_multiple: 1.0  # model depth multiple
 width_multiple: 1.0  # layer channel multiple
-anchors:
-  - [10,13, 16,30, 33,23]  # P3/8
-  - [30,61, 62,45, 59,119]  # P4/16
-  - [116,90, 156,198, 373,326]  # P5/32
 
 # YOLOv5 v6.0 backbone
 backbone:
@@ -36,13 +32,16 @@ head:
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [256, False]],  # 17 (P3/8-small)
 
-   [-1, 1, Conv, [256, 3, 2]],
-   [[-1, 14], 1, Concat, [1]],  # cat head P4
-   [-1, 3, C3, [512, False]],  # 20 (P4/16-medium)
+   [-1, 1, Conv, [256, 1, 1]],
+   [-1, 1, nn.Upsample, [None, 8, 'nearest']],
 
-   [-1, 1, Conv, [512, 3, 2]],
-   [[-1, 10], 1, Concat, [1]],  # cat head P5
-   [-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
+   #[-1, 1, Conv, [256, 3, 2]],
+   #[[-1, 14], 1, Concat, [1]],  # cat head P4
+   #[-1, 3, C3, [512, False]],  # 20 (P4/16-medium)
 
-   [[17, 20, 23], 1, Detect, [nc, anchors]],  # Detect(P3, P4, P5)
+   #[-1, 1, Conv, [512, 3, 2]],
+   #[[-1, 10], 1, Concat, [1]],  # cat head P5
+   #[-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
+
+   [[19], 1, Detect, [nc]],  # Detect(P3, P4, P5)
   ]
