--- a/models/yolov5l.yaml
+++ b/models/yolov5l.yaml
@@ -32,8 +32,13 @@ head:
    [[-1, 4], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [256, False]],  # 17 (P3/8-small)
 
-   [-1, 1, Conv, [256, 1, 1]],
-   [-1, 1, nn.Upsample, [None, 8, 'nearest']],
+   [-1, 1, Conv, [128, 1, 1]],
+   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
+   [[-1, 2], 1, Concat, [1]],  # cat backbone P3
+   [-1, 3, C3, [128, False]],  # 17 (P3/8-small)
+
+   [-1, 1, Conv, [128, 1, 1]],
+   [-1, 1, nn.Upsample, [None, 4, 'nearest']],
 
    #[-1, 1, Conv, [256, 3, 2]],
    #[[-1, 14], 1, Concat, [1]],  # cat head P4
@@ -43,5 +48,5 @@ head:
    #[[-1, 10], 1, Concat, [1]],  # cat head P5
    #[-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
 
-   [[19], 1, Detect, [nc]],  # Detect(P3, P4, P5)
+   [[23], 1, Detect, [nc]],  # Detect(P3, P4, P5)
   ]
