--- a/models/yolov5x.yaml
+++ b/models/yolov5x.yaml
@@ -2,13 +2,13 @@
 
 # Parameters
 nc: 19  # number of classes
-depth_multiple: 0.33  # model depth multiple
-width_multiple: 0.50  # layer channel multiple
+depth_multiple: 1.0  # model depth multiple
+width_multiple: 1.0  # layer channel multiple
 
 # YOLOv5 v6.0 backbone
 backbone:
   # [from, number, module, args]
-  [[-1, 1, Conv, [64, 5, 1, 2]],   
+  [[-1, 1, Conv, [64, 6, 2, 2]],  # 0-P1/2
    [-1, 3, C3, [64]],           # 1-P1/1
    [-1, 1, Conv, [128, 3, 2]],  
    [-1, 6, C3, [128]],          # 3-P2/2
@@ -43,6 +43,9 @@ head:
    [[-1, 1], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [64, False]],   # 26 (P3/8-small)
 
+   [-1, 1, Conv, [64, 1, 1]],
+   [-1, 1, nn.Upsample, [None, 2, 'nearest']],
+
    #[-1, 1, Conv, [64, 3, 2]],
    #[[-1, 22], 1, Concat, [1]], # cat head P4
    #[-1, 3, C3, [128, False]],  # 29 (P4/16-medium)
@@ -52,5 +55,5 @@ head:
    #[-1, 3, C3, [256, False]],  # 32 (P4/16-medium)
 
    #[[26, 29, 32], 1, Detect, [nc]],  # Detect(P3, P4, P5)
-   [[26], 1, Detect, [nc]],  # Detect(P3, P4, P5)
+   [[28], 1, Detect, [nc]],  # Detect(P3, P4, P5)
   ]
