--- a/models/yolov5l.yaml
+++ b/models/yolov5l.yaml
@@ -2,8 +2,8 @@
 
 # Parameters
 nc: 19  # number of classes
-depth_multiple: 1  # model depth multiple
-width_multiple: 1  # layer channel multiple
+depth_multiple: 1.33  # model depth multiple
+width_multiple: 1.25  # layer channel multiple
 
 # YOLOv5 v6.0 backbone
 backbone:
@@ -37,9 +37,9 @@ head:
    [[-1, 2], 1, Concat, [1]],  # cat backbone P3
    [-1, 3, C3, [128, False]],  # 21 (P3/8-small)
 
-   [-1, 1, Conv, [64, 1, 1]],
+   [-1, 1, Conv, [256, 1, 1]],
    [-1, 1, nn.Upsample, [None, 4, 'nearest']],
-   [-1, 3, C3, [64, False]],  # 24 (P3/8-small)
+   #[-1, 3, C3, [64, False]],  # 24 (P3/8-small)
 
    #[-1, 1, Conv, [256, 3, 2]],
    #[[-1, 14], 1, Concat, [1]],  # cat head P4
@@ -49,5 +49,5 @@ head:
    #[[-1, 10], 1, Concat, [1]],  # cat head P5
    #[-1, 3, C3, [1024, False]],  # 23 (P5/32-large)
 
-   [[24], 1, Detect, [nc]],  # Detect(P3, P4, P5)
+   [[23], 1, Detect, [nc]],  # Detect(P3, P4, P5)
   ]
